--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2004,13 +2004,13 @@
     \group_begin:
       \tl_set:Nn \l_@@_internal_a_tl {#1}
       \tl_set:Nn \l_@@_internal_b_tl {#2}
-      \if_meaning:w \l_@@_internal_a_tl \l_@@_internal_b_tl
-        \group_end:
-        \prg_return_true:
-      \else:
-        \group_end:
-        \prg_return_false:
-      \fi:
+      \exp_after:wN
+    \group_end:
+    \if_meaning:w \l_@@_internal_a_tl \l_@@_internal_b_tl
+      \prg_return_true:
+    \else:
+      \prg_return_false:
+    \fi:
   }
 \tl_new:N \l_@@_internal_a_tl
 \tl_new:N \l_@@_internal_b_tl
