A missed upTeX primitive

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1167,6 +1167,7 @@
   \@@_primitive:NN \kchardef              \uptex_kchardef:D
   \@@_primitive:NN \kuten                 \uptex_kuten:D
   \@@_primitive:NN \ucs                   \uptex_ucs:D
+  \@@_primitive:NN \uptexrevision         \uptex_uptexrevision:D
   \@@_primitive:NN \uptexversion          \uptex_uptexversion:D
 %    \end{macrocode}
 % End of the \enquote{just the names} part of the source.
