--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -575,7 +575,7 @@
     \pdftex_pdfinclusionerrorlevel:D
   \@@_primitive:NN \pdfinfo               \pdftex_pdfinfo:D
   \@@_primitive:NN \pdflastannot          \pdftex_pdflastannot:D
-  \@@_primitive:NN \pdflastlink           \pfdftex_pdflastlink:D
+  \@@_primitive:NN \pdflastlink           \pdftex_pdflastlink:D
   \@@_primitive:NN \pdflastobj            \pdftex_pdflastobj:D
   \@@_primitive:NN \pdflastxform          \pdftex_pdflastxform:D
   \@@_primitive:NN \pdflastximage         \pdftex_pdflastximage:D
@@ -631,7 +631,7 @@
   \@@_primitive:NN \pdfeachlineheight     \pdftex_eachlineheight:D
   \@@_primitive:NN \pdffilemoddate        \pdftex_filemoddate:D
   \@@_primitive:NN \pdffilesize           \pdftex_filesize:D
-  \@@_primitive:NN \pdffirstlineheigh     \pdftex_firstlineheight:D
+  \@@_primitive:NN \pdffirstlineheight    \pdftex_firstlineheight:D
   \@@_primitive:NN \pdffontexpand         \pdftex_fontexpand:D
   \@@_primitive:NN \pdffontsize           \pdftex_fontsize:D
   \@@_primitive:NN \pdfignoreddimen       \pdftex_ignoreddimen:D
