Move e-TeX primitives to \tex_... namespace

--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -73,7 +73,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \__kernel_deprecation_error:Nnn #1#2#3
   {
-    \etex_protected:D \tex_outer:D \tex_edef:D #1
+    \tex_protected:D \tex_outer:D \tex_edef:D #1
       {
         \exp_not:N \__kernel_msg_expandable_error:nnnnn
           { kernel } { deprecated-command }
