--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1505,7 +1505,7 @@
 %   At the kernel level, we need the primitive behaviour to allow expansion
 %   \emph{before} the brace group.
 %    \begin{macrocode}
-\cs_new_eq:NN \__kernel_exp_not:w \etex_unexpanded:D
+\cs_new_eq:NN \__kernel_exp_not:w \tex_unexpanded:D
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1520,7 +1520,7 @@
 \cs_new:Npn \exp_not:c #1 { \exp_after:wN \exp_not:N \cs:w #1 \cs_end: }
 \cs_new:Npn \exp_not:o #1 { \__kernel_exp_not:w \exp_after:wN {#1} }
 \cs_new:Npn \exp_not:f #1
-  { \etex_unexpanded:D \exp_after:wN { \exp:w \exp_end_continue_f:w #1 } }
+  { \tex_unexpanded:D \exp_after:wN { \exp:w \exp_end_continue_f:w #1 } }
 \cs_new:Npn \exp_not:V #1
   {
     \__kernel_exp_not:w \exp_after:wN
