--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1064,7 +1064,7 @@
 %   Primitives renamed.
 %    \begin{macrocode}
 \cs_new_eq:NN \if_dim:w      \tex_ifdim:D
-\cs_new_eq:NN \@@_eval:w      \etex_dimexpr:D
+\cs_new_eq:NN \@@_eval:w      \tex_dimexpr:D
 \cs_new_eq:NN \@@_eval_end:   \tex_relax:D
 %    \end{macrocode}
 % \end{macro}
@@ -1871,7 +1871,7 @@
     \__kernel_patch_args:nnnNNpn
       { #1 ##1 }
       { }
-      { {##1} { \__kernel_chk_expr:nNnN {##2} \etex_glueexpr:D { } #3 } }
+      { {##1} { \__kernel_chk_expr:nNnN {##2} \tex_glueexpr:D { } #3 } }
     #2 #3
   }
 %    \end{macrocode}
@@ -1882,10 +1882,10 @@
 %    \begin{macrocode}
 \@@_tmp:w \__kernel_chk_var_local:N
 \cs_new_protected:Npn \skip_set:Nn #1#2
-  { #1 ~ \etex_glueexpr:D #2 \scan_stop: }
+  { #1 ~ \tex_glueexpr:D #2 \scan_stop: }
 \@@_tmp:w \__kernel_chk_var_global:N
 \cs_new_protected:Npn \skip_gset:Nn #1#2
-  { \tex_global:D #1 ~ \etex_glueexpr:D #2 \scan_stop: }
+  { \tex_global:D #1 ~ \tex_glueexpr:D #2 \scan_stop: }
 \cs_generate_variant:Nn \skip_set:Nn  { c }
 \cs_generate_variant:Nn \skip_gset:Nn { c }
 %    \end{macrocode}
@@ -1914,18 +1914,18 @@
 %    \begin{macrocode}
 \@@_tmp:w \__kernel_chk_var_local:N
 \cs_new_protected:Npn \skip_add:Nn #1#2
-  { \tex_advance:D #1 by \etex_glueexpr:D #2 \scan_stop: }
+  { \tex_advance:D #1 by \tex_glueexpr:D #2 \scan_stop: }
 \@@_tmp:w \__kernel_chk_var_global:N
 \cs_new_protected:Npn \skip_gadd:Nn #1#2
-  { \tex_global:D \tex_advance:D #1 by \etex_glueexpr:D #2 \scan_stop: }
+  { \tex_global:D \tex_advance:D #1 by \tex_glueexpr:D #2 \scan_stop: }
 \cs_generate_variant:Nn \skip_add:Nn  { c }
 \cs_generate_variant:Nn \skip_gadd:Nn { c }
 \@@_tmp:w \__kernel_chk_var_local:N
 \cs_new_protected:Npn \skip_sub:Nn #1#2
-  { \tex_advance:D #1 by - \etex_glueexpr:D #2 \scan_stop: }
+  { \tex_advance:D #1 by - \tex_glueexpr:D #2 \scan_stop: }
 \@@_tmp:w \__kernel_chk_var_global:N
 \cs_new_protected:Npn \skip_gsub:Nn #1#2
-  { \tex_global:D \tex_advance:D #1 by - \etex_glueexpr:D #2 \scan_stop: }
+  { \tex_global:D \tex_advance:D #1 by - \tex_glueexpr:D #2 \scan_stop: }
 \cs_generate_variant:Nn \skip_sub:Nn  { c }
 \cs_generate_variant:Nn \skip_gsub:Nn { c }
 %    \end{macrocode}
@@ -1965,13 +1965,13 @@
       {
         {
           \__kernel_chk_expr:nNnN
-            {##1} \etex_glueexpr:D { } \skip_if_finite:n
+            {##1} \tex_glueexpr:D { } \skip_if_finite:n
         }
       }
     \prg_new_conditional:Npnn \skip_if_finite:n ##1 { p , T , F , TF }
       {
         \exp_after:wN \@@_if_finite:wwNw
-        \skip_use:N \etex_glueexpr:D ##1 ; \prg_return_false:
+        \skip_use:N \tex_glueexpr:D ##1 ; \prg_return_false:
         #1 ; \prg_return_true: \q_stop
       }
     \cs_new:Npn \@@_if_finite:wwNw ##1 #1 ##2 ; ##3 ##4 \q_stop {##3}
@@ -1987,9 +1987,9 @@
 %   Evaluating a skip expression expandably.
 %    \begin{macrocode}
 \__kernel_patch_args:nNNpn
-  { { \__kernel_chk_expr:nNnN {#1} \etex_glueexpr:D { } \skip_eval:n } }
+  { { \__kernel_chk_expr:nNnN {#1} \tex_glueexpr:D { } \skip_eval:n } }
 \cs_new:Npn \skip_eval:n #1
-  { \skip_use:N \etex_glueexpr:D #1 \scan_stop: }
+  { \skip_use:N \tex_glueexpr:D #1 \scan_stop: }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2012,22 +2012,22 @@
 \__kernel_patch_args:nNNpn
   {
     {
-      \__kernel_chk_expr:nNnN {#1} \etex_glueexpr:D { }
+      \__kernel_chk_expr:nNnN {#1} \tex_glueexpr:D { }
         \skip_horizontal:n
     }
   }
 \cs_new:Npn \skip_horizontal:n #1
-  { \skip_horizontal:N \etex_glueexpr:D #1 \scan_stop: }
+  { \skip_horizontal:N \tex_glueexpr:D #1 \scan_stop: }
 \cs_new_eq:NN  \skip_vertical:N \tex_vskip:D
 \__kernel_patch_args:nNNpn
   {
     {
-      \__kernel_chk_expr:nNnN {#1} \etex_glueexpr:D { }
+      \__kernel_chk_expr:nNnN {#1} \tex_glueexpr:D { }
         \skip_vertical:n
     }
   }
 \cs_new:Npn \skip_vertical:n #1
-  { \skip_vertical:N \etex_glueexpr:D #1 \scan_stop: }
+  { \skip_vertical:N \tex_glueexpr:D #1 \scan_stop: }
 \cs_generate_variant:Nn \skip_horizontal:N { c }
 \cs_generate_variant:Nn \skip_vertical:N { c }
 %    \end{macrocode}
@@ -2173,7 +2173,7 @@
         {##1}
         {
           \__kernel_chk_expr:nNnN {##2}
-            \etex_muexpr:D { \etex_mutoglue:D } #3
+            \tex_muexpr:D { \tex_mutoglue:D } #3
         }
       }
     #2 #3
@@ -2186,10 +2186,10 @@
 %    \begin{macrocode}
 \@@_tmp:w \__kernel_chk_var_local:N
 \cs_new_protected:Npn \muskip_set:Nn #1#2
-  { #1 ~ \etex_muexpr:D #2 \scan_stop: }
+  { #1 ~ \tex_muexpr:D #2 \scan_stop: }
 \@@_tmp:w \__kernel_chk_var_global:N
 \cs_new_protected:Npn \muskip_gset:Nn #1#2
-  { \tex_global:D #1 ~ \etex_muexpr:D #2 \scan_stop: }
+  { \tex_global:D #1 ~ \tex_muexpr:D #2 \scan_stop: }
 \cs_generate_variant:Nn \muskip_set:Nn  { c }
 \cs_generate_variant:Nn \muskip_gset:Nn { c }
 %    \end{macrocode}
@@ -2226,18 +2226,18 @@
 %    \begin{macrocode}
 \@@_tmp:w \__kernel_chk_var_local:N
 \cs_new_protected:Npn \muskip_add:Nn #1#2
-  { \tex_advance:D #1 by \etex_muexpr:D #2 \scan_stop: }
+  { \tex_advance:D #1 by \tex_muexpr:D #2 \scan_stop: }
 \@@_tmp:w \__kernel_chk_var_global:N
 \cs_new_protected:Npn \muskip_gadd:Nn #1#2
-  { \tex_global:D \tex_advance:D #1 by \etex_muexpr:D #2 \scan_stop: }
+  { \tex_global:D \tex_advance:D #1 by \tex_muexpr:D #2 \scan_stop: }
 \cs_generate_variant:Nn \muskip_add:Nn  { c }
 \cs_generate_variant:Nn \muskip_gadd:Nn { c }
 \@@_tmp:w \__kernel_chk_var_local:N
 \cs_new_protected:Npn \muskip_sub:Nn #1#2
-  { \tex_advance:D #1 by - \etex_muexpr:D #2 \scan_stop: }
+  { \tex_advance:D #1 by - \tex_muexpr:D #2 \scan_stop: }
 \@@_tmp:w \__kernel_chk_var_global:N
 \cs_new_protected:Npn \muskip_gsub:Nn #1#2
-  { \tex_global:D \tex_advance:D #1 by - \etex_muexpr:D #2 \scan_stop: }
+  { \tex_global:D \tex_advance:D #1 by - \tex_muexpr:D #2 \scan_stop: }
 \cs_generate_variant:Nn \muskip_sub:Nn  { c }
 \cs_generate_variant:Nn \muskip_gsub:Nn { c }
 %    \end{macrocode}
@@ -2254,12 +2254,12 @@
 \__kernel_patch_args:nNNpn
   {
     {
-      \__kernel_chk_expr:nNnN {#1} \etex_muexpr:D
-        { \etex_mutoglue:D } \muskip_eval:n
+      \__kernel_chk_expr:nNnN {#1} \tex_muexpr:D
+        { \tex_mutoglue:D } \muskip_eval:n
     }
   }
 \cs_new:Npn \muskip_eval:n #1
-  { \muskip_use:N \etex_muexpr:D #1 \scan_stop: }
+  { \muskip_use:N \tex_muexpr:D #1 \scan_stop: }
 %    \end{macrocode}
 % \end{macro}
 %
