--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1489,7 +1489,7 @@
       }
       {
         \group_begin:
-          \exp_args:No \etex_everyeof:D
+          \exp_args:No \tex_everyeof:D
             { \c_@@_rescan_marker_tl \exp_not:N }
           \int_compare:nNnT \tex_endlinechar:D = { 32 }
             { \int_set:Nn \tex_endlinechar:D { -1 } }
@@ -1507,7 +1507,7 @@
       {
         \exp_after:wN \@@_rescan:w
         \exp_after:wN \prg_do_nothing:
-        \etex_scantokens:D {#1}
+        \tex_scantokens:D {#1}
       }
   }
 \exp_args:Nno \use:nn
@@ -1625,7 +1625,7 @@
               \exp_not:n { \cs_set:Npn \@@_rescan:w ##1 }
               \exp_after:wN \@@_rescan:w
               \exp_after:wN \prg_do_nothing:
-              \etex_scantokens:D {#1}
+              \tex_scantokens:D {#1}
             }
           \c_@@_rescan_marker_tl
         }
@@ -1640,7 +1640,7 @@
             = { 10 } { ~ }
           \exp_after:wN \@@_rescan:w
           \exp_after:wN \prg_do_nothing:
-          \etex_scantokens:D { #2 #1 }
+          \tex_scantokens:D { #2 #1 }
         }
     }
 \group_end:
@@ -2998,7 +2998,7 @@
       {
         \__kernel_iow_with:Nnn \tex_errorcontextlines:D { -1 }
           {
-            \etex_showtokens:D \exp_after:wN \exp_after:wN \exp_after:wN
+            \tex_showtokens:D \exp_after:wN \exp_after:wN \exp_after:wN
               { \exp_after:wN \l_@@_internal_a_tl }
           }
       }
