--- a/l3trial/l3check/l3check.dtx
+++ b/l3trial/l3check/l3check.dtx
@@ -1160,14 +1160,14 @@
     \cs_gset_protected:Npn \cs_set:Npx { \tex_long:D \tex_edef:D }
     \cs_gset_protected:Npn \cs_gset:Npn { \tex_long:D \tex_gdef:D }
     \cs_gset_protected:Npn \cs_gset:Npx { \tex_long:D \tex_xdef:D }
-    \cs_gset_protected:Npn \cs_set_protected_nopar:Npn { \etex_protected:D \tex_def:D }
-    \cs_gset_protected:Npn \cs_set_protected_nopar:Npx { \etex_protected:D \tex_edef:D }
-    \cs_gset_protected:Npn \cs_gset_protected_nopar:Npn { \etex_protected:D \tex_gdef:D }
-    \cs_gset_protected:Npn \cs_gset_protected_nopar:Npx { \etex_protected:D \tex_xdef:D }
-    \cs_gset_protected:Npn \cs_set_protected:Npn { \etex_protected:D \tex_long:D \tex_def:D }
-    \cs_gset_protected:Npn \cs_set_protected:Npx { \etex_protected:D \tex_long:D \tex_edef:D }
-    \cs_gset_protected:Npn \cs_gset_protected:Npn { \etex_protected:D \tex_long:D \tex_gdef:D }
-    \cs_gset_protected:Npn \cs_gset_protected:Npx { \etex_protected:D \tex_long:D \tex_xdef:D }
+    \cs_gset_protected:Npn \cs_set_protected_nopar:Npn { \tex_protected:D \tex_def:D }
+    \cs_gset_protected:Npn \cs_set_protected_nopar:Npx { \tex_protected:D \tex_edef:D }
+    \cs_gset_protected:Npn \cs_gset_protected_nopar:Npn { \tex_protected:D \tex_gdef:D }
+    \cs_gset_protected:Npn \cs_gset_protected_nopar:Npx { \tex_protected:D \tex_xdef:D }
+    \cs_gset_protected:Npn \cs_set_protected:Npn { \tex_protected:D \tex_long:D \tex_def:D }
+    \cs_gset_protected:Npn \cs_set_protected:Npx { \tex_protected:D \tex_long:D \tex_edef:D }
+    \cs_gset_protected:Npn \cs_gset_protected:Npn { \tex_protected:D \tex_long:D \tex_gdef:D }
+    \cs_gset_protected:Npn \cs_gset_protected:Npx { \tex_protected:D \tex_long:D \tex_xdef:D }
 %    \end{macrocode}
 % Simplify \cs{cs_gset_eq:NN} and \cs{cs_new_eq:NN} similarly rather
 % than defining them in terms of \cs{cs_set_eq:NN}
@@ -2144,7 +2144,7 @@
 %    \begin{macrocode}
     % \cs_gset:Npn \tl_to_str:N #1
     %   {
-    %     \etex_detokenize:D
+    %     \tex_detokenize:D
     %       \@@_if_on:nT { l3tl }
     %         { \@@_variable_type_exp:nn {#1} { tl } }
     %       \exp_after:wN {#1}
