--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -993,7 +993,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_initialise_variables:
   {
-    \int_set:Nn \l_@@_group_level_int { \etex_currentgrouplevel:D }
+    \int_set:Nn \l_@@_group_level_int { \tex_currentgrouplevel:D }
     \bool_gset_true:N \g_@@_begin_level_bool
     \bool_gset_false:N \g_@@_cutout_active_bool
     \seq_gclear:N \g_@@_cutout_left_seq
@@ -1264,7 +1264,7 @@
           }
         \@@_parshape_set:
       }
-    \int_compare:nNnT \l_@@_group_level_int = \etex_currentgrouplevel:D
+    \int_compare:nNnT \l_@@_group_level_int = \tex_currentgrouplevel:D
       {
         \bool_lazy_and:nnT
           { \seq_if_empty_p:N \g_@@_cutout_left_seq }
@@ -2014,8 +2014,8 @@
       { \galley_vspace_set_single:n {#1} }
       {
         \dim_compare:nNnT
-          { \etex_glueexpr:D \g_@@_interpar_vspace_user_tl } 
-            < { \etex_glueexpr:D (#1) \scan_stop: }
+          { \tex_glueexpr:D \g_@@_interpar_vspace_user_tl } 
+            < { \tex_glueexpr:D (#1) \scan_stop: }
           { \galley_vspace_set_single:n {#1} }
       }
   }
@@ -2063,7 +2063,7 @@
 % \begin{variable}{\l_galley_last_line_fit_int}
 %   One from \eTeX{}.
 %    \begin{macrocode}
-\cs_new_eq:NN \l_galley_last_line_fit_int \etex_lastlinefit:D
+\cs_new_eq:NN \l_galley_last_line_fit_int \tex_lastlinefit:D
 %    \end{macrocode}
 % \end{variable}
 %
@@ -2224,7 +2224,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \galley_display_widow_penalties_set:n #1
   {
-    \etex_displaywidowpenalties:D
+    \tex_displaywidowpenalties:D
       \int_eval:n { \clist_count:n {#1} + 1 } \exp_stop_f:
       \clist_map_function:nN {#1} \@@_set_aux:n
       0 \exp_stop_f:
@@ -2232,7 +2232,7 @@
 \cs_generate_variant:Nn \galley_display_widow_penalties_set:n { V , v }
 \cs_new_protected:Npn \galley_widow_penalties_set:n #1
   {
-    \etex_widowpenalties:D
+    \tex_widowpenalties:D
       \int_eval:n { \clist_count:n {#1} + 1 } \exp_stop_f:
       \clist_map_function:nN {#1} \@@_set_aux:n
       0 \exp_stop_f:
@@ -2283,7 +2283,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \galley_display_club_penalties_set:n #1
   {
-    \etex_clubpenalties:D
+    \tex_clubpenalties:D
       \int_eval:n { \clist_count:n {#1} + 1 } \exp_stop_f:
       \clist_map_function:nN {#1} \@@_set_aux:n
       0 \exp_stop_f:
@@ -2309,9 +2309,9 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \galley_interline_penalty_set:n #1
   {
-    \int_compare:nNnTF { \etex_interlinepenalties:D 0 } = 0
+    \int_compare:nNnTF { \tex_interlinepenalties:D 0 } = 0
       {
-        \etex_interlinepenalties:D 1 = \int_eval:n {#1} \exp_stop_f:
+        \tex_interlinepenalties:D 1 = \int_eval:n {#1} \exp_stop_f:
         \@@_calc_interline_penalties:
       }
       {
@@ -2319,8 +2319,8 @@
           {
             \int_eval:n
               {
-                \etex_interlinepenalties:D ##1
-                - \etex_interlinepenalties:D \etex_interlinepenalties:D 0
+                \tex_interlinepenalties:D ##1
+                - \tex_interlinepenalties:D \tex_interlinepenalties:D 0
                 + #1
               }
               \exp_stop_f:
@@ -2331,16 +2331,16 @@
   }
 \cs_new_protected:Npn \@@_set_interline_penalty:nn #1#2
   {
-    \etex_interlinepenalties:D
-      \etex_interlinepenalties:D 0 \exp_stop_f:
+    \tex_interlinepenalties:D
+      \tex_interlinepenalties:D 0 \exp_stop_f:
       \int_step_function:nN {#1}
         \@@_set_interline_penalty_auxi:n
-      \int_step_function:nnN { #1 + 1 } { \etex_interlinepenalties:D 0 - 1 }
+      \int_step_function:nnN { #1 + 1 } { \tex_interlinepenalties:D 0 - 1 }
         \@@_set_interline_penalty_auxii:n
       \int_eval:n {#2} \exp_stop_f:
   }
 \cs_new:Npn \@@_set_interline_penalty_auxi:n #1
-  { \etex_interlinepenalties:D \int_eval:n {#1} \exp_stop_f: }
+  { \tex_interlinepenalties:D \int_eval:n {#1} \exp_stop_f: }
 \cs_new:Npn \@@_set_interline_penalty_auxii:n #1 { }
 %    \end{macrocode}
 % \end{macro}
@@ -2370,7 +2370,7 @@
           {
             \int_max:nn
               { \clist_count:N \l_galley_line_penalties_clist + 1 }
-              { \etex_clubpenalties:D 0 }
+              { \tex_clubpenalties:D 0 }
           }
       }
       { \clist_count:N \l_galley_line_penalties_clist }
@@ -2383,12 +2383,12 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_calc_interline_penalties:nn #1#2
   {
-    \etex_interlinepenalties:D #1 ~
+    \tex_interlinepenalties:D #1 ~
       \int_step_function:nN {#2}
         \@@_calc_interline_penalties_auxi:n
       \int_step_function:nnN { #2 + 1 } { #1 - 1 }
         \@@_calc_interline_penalties_auxii:n
-      \etex_interlinepenalties:D \etex_interlinepenalties:D 0 \exp_stop_f:
+      \tex_interlinepenalties:D \tex_interlinepenalties:D 0 \exp_stop_f:
   }
 \cs_new:Npn \@@_calc_interline_penalties_auxi:n #1
   {
@@ -2396,7 +2396,7 @@
       {
         \clist_item:Nn \l_galley_line_penalties_clist {#1}
         + 0 \clist_item:Nn \l_galley_club_penalties_clist {#1}
-        - \etex_clubpenalties:D #1 ~
+        - \tex_clubpenalties:D #1 ~
       }
       \exp_stop_f:
   }
@@ -2404,9 +2404,9 @@
   {
     \int_eval:n
       {
-        \etex_interlinepenalties:D \etex_interlinepenalties:D 0 \exp_stop_f:
+        \tex_interlinepenalties:D \tex_interlinepenalties:D 0 \exp_stop_f:
         + 0 \clist_item:Nn \l_galley_club_penalties_clist {#1}
-        - \etex_clubpenalties:D #1 ~
+        - \tex_clubpenalties:D #1 ~
       }
       \exp_stop_f:
   }
@@ -2445,42 +2445,42 @@
   {
     \clist_set:Nx #1
       {
-        \int_step_function:nN { \etex_clubpenalties:D 0 - 1 }
+        \int_step_function:nN { \tex_clubpenalties:D 0 - 1 }
           \@@_save_display_club_penalties:n
       }
   }
 \cs_new:Npn \@@_save_display_club_penalties:n #1
-  { \int_value:w \etex_clubpenalties:D \int_eval:n {#1} , }
+  { \int_value:w \tex_clubpenalties:D \int_eval:n {#1} , }
 \cs_new_protected:Npn \galley_save_display_widow_penalties:N #1
   {
     \clist_set:Nx #1
       {
-        \int_step_function:nN { \etex_displaywidowpenalties:D 0 - 1 }
+        \int_step_function:nN { \tex_displaywidowpenalties:D 0 - 1 }
           \@@_save_display_widow_penalties:n
       }
   }
 \cs_new:Npn \@@_save_display_widow_penalties:n #1
   {
-    \int_value:w \etex_displaywidowpenalties:D
+    \int_value:w \tex_displaywidowpenalties:D
       \int_eval:n {#1} ,
   }
 \cs_new_protected:Npn \galley_save_widow_penalties:N #1
   {
     \clist_set:Nx #1
       {
-        \int_step_function:nN { \etex_widowpenalties:D 0 - 1 }
+        \int_step_function:nN { \tex_widowpenalties:D 0 - 1 }
           \@@_save_widow_penalties:n
       }
   }
 \cs_new:Npn \@@_save_widow_penalties:n #1
-  { \int_value:w \etex_widowpenalties:D \int_eval:n {#1} , }
+  { \int_value:w \tex_widowpenalties:D \int_eval:n {#1} , }
 %    \end{macrocode}
 %   This one is not an array, but is stored in a primitive, so there is
 %   a simple conversion. The general interline penalty is always the
 %   last value in the primitive array.
 %    \begin{macrocode}
 \cs_new_protected:Npn \galley_interline_penalty:
-  { \int_value:w \etex_interlinepenalties:D \etex_interlinepenalties:D 0 \exp_stop_f: }
+  { \int_value:w \tex_interlinepenalties:D \tex_interlinepenalties:D 0 \exp_stop_f: }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
