--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2512,8 +2512,8 @@
   {
     \skip_if_finite:nTF {#1}
       {
-        #3 = \etex_gluestretch:D #1 \scan_stop:
-        #4 = \etex_glueshrink:D  #1 \scan_stop:
+        #3 = \tex_gluestretch:D #1 \scan_stop:
+        #4 = \tex_glueshrink:D  #1 \scan_stop:
       }
       {
         #3 = \c_zero_skip
@@ -2757,7 +2757,7 @@
       { \__kernel_file_missing:n {#4} }
       {
         \group_begin:
-          \exp_args:No \etex_everyeof:D
+          \exp_args:No \tex_everyeof:D
             { \c_@@_rescan_marker_tl \exp_not:N }
           #3 \scan_stop:
           \exp_after:wN \@@_from_file_do:w
@@ -2801,7 +2801,7 @@
       { \__kernel_file_missing:n {#4} }
       {
         \group_begin:
-          \etex_everyeof:D { \exp_not:N }
+          \tex_everyeof:D { \exp_not:N }
           #3 \scan_stop:
           \tl_set:Nx \l_@@_internal_a_tl
             { \tex_input:D \l_@@_file_name_str \c_space_token }
