--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -934,7 +934,7 @@
     \exp_args:Nno \use:n
       {
         \int_set:Nn \tex_endlinechar:D { -1 }
-        \etex_readline:D #1 to #2
+        \tex_readline:D #1 to #2
         \int_set:Nn \tex_endlinechar:D
       }   { \int_use:N \tex_endlinechar:D }
   }
