--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -71,7 +71,7 @@
 %   use private names. The same is true for \tn{romannumeral}, although it
 %   is used much less widely.
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_int_eval:w \etex_numexpr:D
+\cs_new_eq:NN \@@_int_eval:w \tex_numexpr:D
 \cs_new_eq:NN \@@_int_eval_end: \scan_stop:
 \cs_new_eq:NN \@@_int_to_roman:w \tex_romannumeral:D
 %    \end{macrocode}
