--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -920,7 +920,7 @@
 %   Access the primitive: performance is key here, so we do not use
 %   the slower route \emph{via} \cs{int_eval:n}.
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_int_eval:w \etex_numexpr:D
+\cs_new_eq:NN \@@_int_eval:w \tex_numexpr:D
 %     \end{macrocode}
 % \end{macro}
 %
