--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -663,7 +663,7 @@
 %   primitives, used for calculations.
 %    \begin{macrocode}
 \cs_new_eq:NN \@@_int_value:w \tex_number:D
-\cs_new_eq:NN \@@_int_eval:w \etex_numexpr:D
+\cs_new_eq:NN \@@_int_eval:w \tex_numexpr:D
 \cs_new_eq:NN \@@_int_eval_end: \scan_stop:
 %    \end{macrocode}
 % \end{macro}
